Upload for t.maplat.jp

--- a/pwa/templates/template.html
+++ b/pwa/templates/template.html
@@ -19,9 +19,9 @@
   </style>
   <meta property="og:image" content="{{splash}}">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/{{appid}}map/">
-  <link rel="alternate" href="https://s.maplat.jp/r/{{appid}}map/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/{{appid}}map/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/{{appid}}map/">
+  <link rel="alternate" href="https://t.maplat.jp/r/{{appid}}map/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/{{appid}}map/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/{{appid}}_manifest.json">
   <meta property="og:title" content="{{title}}">
   <meta name="description" content="{{description}}">
