Marker listをマーカーゼロの時に非表示

--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -677,7 +677,7 @@ input[type="checkbox"].markerlist:checked + label.check > div {
   display: none;
 }
 
-&.no_poi .ol-hide-marker {
+&.no_poi .ol-hide-marker, &.no_poi .ol-marker-list {
   display: none;
 }
 
