--- a/less/maplat-specific.less
+++ b/less/maplat-specific.less
@@ -900,3 +900,19 @@ input[type="checkbox"].markerlist:checked+label.check>div {
     background-color: rgba(120, 5, 8, 0.7);
   }
 }
+
+/* Scrollable modal support */
+.modal-dialog {
+  height: calc(100% - 60px);
+  margin: 30px auto;
+}
+
+.modal-content {
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-body {
+  overflow-y: auto;
+}
